--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ githubiverse:
     src_dir: src
 
     ## The headline image
-    lead_image: initial-frame.png
+    lead_image: corexy-frame.png
     show_lead_image: true
 
     ## Optional. When uncommented appends the content of the file defined here to the project description.  Any text in index.md, after the yaml header, will be shown first.
